--- a/_posts/personal-finance/2024-06-20-50-30-20-rule.md
+++ b/_posts/personal-finance/2024-06-20-50-30-20-rule.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "A Guide To 5-/30/20 Rule In Personal Finance"
+title: "A Guide To 50/30/20 Rule In Personal Finance"
 categories: "Personal Finance"
 ---
 
